--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -55,15 +55,15 @@ html {
 }
 
 .checkout-input {
-    width: 100%;
-    padding: 12px;
-    margin: 10px 0;
-    border: 1px solid rgba(255,255,255,0.3);
-    border-radius: 10px;
-    font-size: 16px;
-    background: rgba(255,255,255,0.15);
-    color: white;
-    backdrop-filter: blur(5px);
+  width: 100%;
+  padding: 12px;
+  margin: 10px 0;
+  border: 1px solid rgba(255,255,255,0.3);
+  border-radius: 10px;
+  font-size: 16px;
+  background: rgba(255,255,255,0.15);
+  color: white;
+  backdrop-filter: blur(5px);
 }
 
 .checkout-input::placeholder {
@@ -128,10 +128,10 @@ html {
 .link-shopping-cart {
   padding: 15px;
   border-left:  #c4c4c4ff solid 1px ;
-height: 100%;
+  height: 100%;
   margin-left: 15px;
   display: flex; 
-    align-items: center; 
+  align-items: center; 
 }
 
 .top-nav {
@@ -153,7 +153,7 @@ height: 100%;
   text-decoration: none;
   color: #ffffff;
   margin: 0;
-    font-weight: 700;
+  font-weight: 700;
   font-size: 35px;
 }
 
@@ -162,22 +162,48 @@ height: 100%;
   color: #ffffff;
   margin: 0;
 }
+
 .nav-products h2 {
-   font-weight: 700;
+  font-weight: 700;
   font-size: 35px;
   margin-left: 30px;
 }
+
 .nav-link h1 {
   font-weight: 700;
   font-size: 45px;
 }
 
 .nav-greeting {
-   font-weight: 700;
+  font-weight: 700;
   font-size: 35px;
   margin-left: 30px;
 }
 
+.mob-nav-btn {
+  all: unset;
+  font-size: 32px;
+  margin: 15px;
+}
+.mob-nav-btn:hover {
+  transition: all ease-in-out 0.17s;
+  cursor: pointer;
+  transform: scaleX(1.4);
+  filter: invert(20%);
+}
+.navUi {
+  background-color: #152620;
+  border-bottom: 1px solid #c8c8c8;
+}
+.navUi a {
+  color: #ffffff;
+  text-decoration: none;
+  padding-inline: 10px;
+}
+.navUi a:hover {
+  transition: all 0.17s ease-in;
+  background-color: #00000057;
+}
 @font-face {
   font-family: outfit;
   font-weight: 500;
@@ -211,5 +237,19 @@ height: 100%;
 @media (max-width:600px) {
   body {
     background-position: left;
+  }
+  .mob-show {
+    display: block;
+  }
+  .mob-hidden {
+    display: none;
+  }
+}
+@media (min-width:600px) {
+  .mob-hidden {
+    display: block;
+  }
+  .mob-show {
+    display: none;
   }
 }
