--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -49,7 +49,6 @@ html {
 .checkout-container {
   max-width: 650px;
   margin: 40px auto;
-  background: rgba(1, 112, 61, 0.39);
   padding: 25px;
   border-radius: 8px;
 }
@@ -75,7 +74,15 @@ html {
     border-color: white;
 }
 
-
+.cart-box {
+    background: rgba(255, 255, 255, 0.08);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    backdrop-filter: blur(10px);
+    border-radius: 1.5rem;
+    padding: 2rem;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
+    margin-top: 20px;
+}
 #toast {
   position: fixed;
   bottom: 20px;
