--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -20,7 +20,10 @@ a:hover {color: var(--paragraph-color);}
 .side-nav {
     width: 220px;
     height: 100vh;
-    background-color: #2c3e50;
+    background: rgba(37, 37, 37, 0.1);
+    backdrop-filter: blur(10px);
+    border-right: 1px solid rgba(255, 255, 255, 0.2);
+    box-shadow: 0 20px 50px rgba(50, 50, 50, 0.3);
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -400,6 +403,8 @@ a:hover {color: var(--paragraph-color);}
     .side-nav {
         height: unset;
         width: 100%;
+        border-left: unset;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     }
     .max-1200 {
         justify-content: unset;
